@@ -99,6 +99,7 @@ Aurélien Ribeiro <aurel.koala@hotmail.fr>
 Rockworld <sumoisrock@gmail.com>
 Donald Rogers <dero2648@clear.net.nz>
 Leo Romanovski <leo@pythonics.org>
+Pavel Sanda <sanda@lyx.org>
 Sahran
 Asier Iturralde Sarasola
 Xuacu Saturio <xuacusk8@gmail.com>
