@@ -2,6 +2,7 @@ Release 0.4.18:
   * Added support for nested splitting of document views.
   * Added support for transparent decompression of document files.
   * Added restoring of tab order and of current tab.
+  * Added action to open current file in new window. Thanks to Pavel Sanda.
 
 Release 0.4.17:
   * Fixed query to populate the instance list for the choose instance dialog.
